Refactoring and changed marking as read so only updated articles are marked before the new articles are inserted.